src/objects/ints__EfxReport_Garnishment__c.object
<CustomObject>
    <fields>
        <fullName>ints__Amount__c</fullName>
        <label>Amount</label>
        <length>20</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__CaseNumber__c</fullName>
        <label>CaseNumber</label>
        <length>10</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__CustomerNumber__c</fullName>
        <label>CustomerNumber</label>
        <length>50</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__DateSatisfied__c</fullName>
        <label>DateSatisfied</label>
        <length>20</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__EfxReport__c</fullName>
        <label>EfxReport</label>
        <referenceTo>ints__EfxReport__c</referenceTo>
        <relationshipName>Equifax_Garnishments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ints__Garnishee__c</fullName>
        <label>Garnishee</label>
        <length>100</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__Name__c</fullName>
        <label>Name</label>
        <length>50</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__Plaintiff__c</fullName>
        <label>Plaintiff</label>
        <length>175</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__VerificationDate__c</fullName>
        <label>VerificationDate</label>
        <length>20</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <label>EfxReport Garnishment</label>
    <nameField>
        <displayFormat>EFX-GARNISHMENT-{0000000000}</displayFormat>
        <label>Equifax Garnishment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EfxReport Garnishments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>